<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="developer_lab.com.activity_bio.Details_Activity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""

        android:textColor="@color/title"
        android:layout_centerInParent="true"
        android:id="@+id/name"
        android:textSize="@dimen/height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="197dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="@color/title"
        android:id="@+id/textView3"
        android:layout_marginStart="41dp"
        android:layout_marginTop="53dp"
        android:textSize="@dimen/height"
        android:layout_alignTop="@+id/name"
        android:layout_alignStart="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/title"
        android:id="@+id/textView4"
        android:textSize="@dimen/height"
        android:layout_alignTop="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director"
        android:textColor="@color/title"
        android:id="@+id/textView5"
        android:textSize="@dimen/height"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/title"
        android:text=""
        android:textSize="@dimen/height"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cast"
        android:textColor="@color/title"
        android:id="@+id/textView7"
        android:textSize="@dimen/height"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/height"
        android:textColor="@color/title"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignStart="@+id/textView6" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>
